--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,13 @@
     margin-bottom: 40px;
     text-align: center;
     line-height: 30px; }
+    .text-poster-one ul li:hover {
+      -webkit-transform: rotate(-10deg);
+      -ms-transform: rotate(-10deg);
+      transform: rotate(-10deg);
+      -webkit-transition-duration: .5s;
+      -o-transition-duration: .5s;
+      transition-duration: .5s; }
   .text-poster-one ul li:first-child {
     letter-spacing: -1.19px;
     color: #474747;
@@ -254,6 +261,10 @@
 .span-row-2 {
   -ms-grid-row-span: 2;
   grid-row: span 2 / auto; }
+  .span-row-2 img:hover {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2); }
 
 .best_feature_bg {
   background-image: url("../img/Best_Feature.png");
@@ -296,6 +307,13 @@
   -ms-flex-align: center;
   align-items: center;
   color: white; }
+  .best_feature_block img:hover {
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+    -webkit-transition-duration: .2s;
+    -o-transition-duration: .2s;
+    transition-duration: .2s; }
 
 .best_feature_block h2 {
   color: #ffffff;
